--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,8 +15,8 @@
             </div>
 
             <input type="text" name="titulo-tarea" autocomplete="off"
-            data-bind="value: titulo,visible: esNuevo,
-            event: {focusout: manejarFocusOutTituloTarea}"/>
+            data-bind="value: titulo, visible: esNuevo,
+            event: {focusout: manejarFocusOutTituloTarea}" />
         </div>
     </div>
 
@@ -34,6 +34,9 @@
     <script src="~/js/tareas.js" asp-append-version="true"></script>
 
     <script>
+
+        const urlTareas = "api/tareas";
+
         function tareaListadoViewModelFn() {
             var self = this;
             self.tareas = ko.observableArray([]);
@@ -59,9 +62,7 @@
 
         const tareaListadoViewModel = new tareaListadoViewModelFn();
 
-        setTimeout(() => {
-            tareaListadoViewModel.cargando(false);
-        },500)
+        obtenerTareas();
 
         ko.applyBindings(tareaListadoViewModel, document.getElementById('contenedor-listado-tareas'));
     </script>
