--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,8 @@
 
 <div id="contenedor-listado-tareas" class="text-center">
     <div class="text-start" id="reordenable" data-bind="foreach: tareas">
-        <div name="tarea" class="border mb-2 p-2" style="cursor: pointer">
+        <div name="tarea" class="border mb-2 p-2" style="cursor: pointer"
+                data-bind="click: manejarClickTarea">
             <div data-bind="text: titulo, hidden: esNuevo" class="fw-bold">
             </div>
 
@@ -30,6 +31,8 @@
     </div>
 </div>
 
+<partial name="_ModalEditarTarea"></partial>
+
 @section Scripts{
 
     <script src="~/js/tareas.js" asp-append-version="true"></script>
@@ -38,6 +41,9 @@
     <script>
 
         const urlTareas = "api/tareas";
+
+        const modalEditarTarea = document.getElementById('modal-editar-tarea');
+        const modalEditarTareaBootstrap = new bootstrap.Modal(modalEditarTarea)
 
         function tareaListadoViewModelFn() {
             var self = this;
@@ -62,11 +68,18 @@
             })
         }
 
+        const tareaEditarVM = {
+            id:0,
+            titulo: ko.observable(''),
+            descripcion:ko.observable('')
+        }
+
         const tareaListadoViewModel = new tareaListadoViewModelFn();
 
         obtenerTareas();
 
         ko.applyBindings(tareaListadoViewModel, document.getElementById('contenedor-listado-tareas'));
+        ko.applyBindings(tareaEditarVM, document.getElementById('contenedor-listado-tareas'));
     </script>
 }
 
