--- a/Views/Home/_ModalEditarTarea.cshtml
+++ b/Views/Home/_ModalEditarTarea.cshtml
@@ -21,6 +21,9 @@
 
                             </textarea>
                         </div>
+                        <div class="mb-3">
+                            <partial name="_Pasos"></partial>
+                        </div>
                     </div>
                     <div class="col-lg-3">
                         <button data-bind="{click: intentarBorrarTarea}" 
