--- a/Views/Home/_Pasos.cshtml
+++ b/Views/Home/_Pasos.cshtml
@@ -8,10 +8,11 @@
         <div class="row">
             <div class="col-1">
                 <input type="checkbox" class="form-check-input" 
-                name="chbPaso" data-bind="{checked: realizado}" />
+                name="chbPaso" data-bind="{checked: realizado, click: manejarClickCheckboxPaso}" />
             </div>
             <div class="col-11">
-                <span data-bind="text: descripcion, hidden: modoEdicion"></span>
+                <span style="cursor: pointer" data-bind="text: descripcion, hidden: modoEdicion, 
+                css:{'text-decoration-line-through': realizado}, click: manejarClickDescripcionPaso"></span>
                 <textarea name="txtPasoDescripcion" class="form-control" 
                 placeholder="Agregue una descripcion"
                 data-bind="{value: descripcion, visible: modoEdicion}">
@@ -19,6 +20,7 @@
             <div class="mt-2" data-bind="{visible: modoEdicion}">
                 <button class="btn btn-primary" data-bind="{click: manejarClickSalvarPaso}">Salvar</button>
                 <button class="btn btn-secondary" data-bind="{click: manejarClickCancelarPaso}">Cancelar</button>
+                <button class="btn btn-danger" data-bind="{click: manejarClickBorrarPaso, hidden: esNuevo}">Borrar</button>
             </div>
             </div>
         </div>
