--- a/Views/Home/_Pasos.cshtml
+++ b/Views/Home/_Pasos.cshtml
@@ -3,12 +3,12 @@
     <i class="bi bi-plus"></i>
 </button>
 
-<div data-bind="foreach: pasos">
+<div id="reordenable-pasos" data-bind="foreach: pasos">
     <div class="mt-2">
         <div class="row">
             <div class="col-1">
-                <input type="checkbox" class="form-check-input" 
-                name="chbPaso" data-bind="{checked: realizado, click: manejarClickCheckboxPaso}" />
+                <input type="checkbox" class="form-check-input" name="chbPaso" 
+                data-bind="{checked: realizado, click: manejarClickCheckboxPaso,},attr:{'dara-id':id}" />
             </div>
             <div class="col-11">
                 <span style="cursor: pointer" data-bind="text: descripcion, hidden: modoEdicion, 
