--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -45,11 +45,13 @@
     <script src="~/js/tareas.js" asp-append-version="true"></script>
     <script src="~/js/utilidades.js" asp-append-version="true"></script>
     <script src="~/js/pasos.js" asp-append-version="true"></script>
+    <script src="~/js/archivos-adjuntos.js" asp-append-version="true"></script>
 
     <script>
 
         const urlTareas = "api/tareas";
         const urlPasos = "api/pasos";
+        const urlArchivos = "api/archivos"
 
         const modalEditarTarea = document.getElementById('modal-editar-tarea');
         const modalEditarTareaBootstrap = new bootstrap.Modal(modalEditarTarea)
@@ -90,7 +92,8 @@
             id:0,
             titulo: ko.observable(''),
             descripcion:ko.observable(''),
-            pasos: ko.observableArray([])
+            pasos: ko.observableArray([]),
+            archivosAdjuntos: ko.observable([])
         }
 
         const tareaListadoViewModel = new tareaListadoViewModelFn();
