--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -111,6 +111,17 @@
             })
         }
 
+        function archivoAdjuntoViewModel({ id, titulo, publicado, modoEdicion, orden, url }) {
+            var self = this;
+            self.id = id;
+            self.titulo = ko.observable(titulo || '');
+            self.publicado = publicado;
+            self.modoEdicion = ko.observable;
+            self.orden = orden;
+            self.url = url;
+
+        }
+
         obtenerTareas();
 
         ko.applyBindings(tareaListadoViewModel, document.getElementById('contenedor-listado-tareas'));
