Descarga de archivos adjuntos

--- a/Views/Home/_ArchivosAdjuntos.cshtml
+++ b/Views/Home/_ArchivosAdjuntos.cshtml
@@ -15,7 +15,7 @@
         <div>
             Agregado <span data-bind="text:publicado"></span> -
             <span class="fw-bold text-danger" style="cursor:pointer" data-bind="click: manejarClickBorrarArchivoAdjunto">Borrar</span> -
-            <span class="fw-bold text-success" style="cursor:pointer">Descargar</span>
+            <span class="fw-bold text-success" style="cursor:pointer" data-bind="manejarClickDescargarArchivoAdjunto">Descargar</span>
         </div>
     </div>
 </div>
